# rpass

./: Cargo.toml  README.md
src/: commands_old.rs  config.rs  def.rs  errors.rs  main.rs  rofi_app.rs
src/commands/: bulk_rename.rs  delete.rs  edit.rs  fix_index.rs  get.rs  init.rs  insert.rs  interactive.rs  list.rs  mod.rs  mv.rs  passwd.rs  utils.rs
src/commands/sync/: daemon.rs  init.rs  mod.rs  sync.rs  syncer.rs
src/pass/: entry.rs  index.rs  mod.rs
