[package]
name = "rpass"
version = "0.4.1"
authors = ["Tibor Schneider <tiborschneider@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = [ "v4" ] }
petgraph = { version = "0.5", features = [ "graphmap" ] }
clap = "2.33.0"
text_io = "0.1.8"
fake = "2.2"
rpassword = "4.0"
clipboard = "0.5.0"
notify-rust = "3"
ansi_term = "0.12.1"
dirs = "2.0.2"
unidiff = "0.3"
ctrlc = "3.1.4"
interactor = "0.1.1"
rofi = "0.3.0"
toml = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
lazy_static = "1.4"
thiserror = "1.0.19"
libxdo = "0.6.0"
